--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,6 @@ jobs:
       - name: Lint
         id: npm-lint
         run: npm run lint
-      - name: Test
-        id: npm-ci-test
-        run: npm run ci-test
   test-action:
     name: GitHub Actions Test
     runs-on: ubuntu-latest
@@ -45,7 +42,10 @@ jobs:
         id: test-action
         uses: ./
         with:
-          milliseconds: 2000
+          environment: staging
+          owner: svix-jbrown
+          repo: get-newly-deployed-commits
+          sha: ${{ github.sha }}
       - name: Print Output
         id: output
-        run: echo "${{ steps.test-action.outputs.time }}"
+        run: echo "${{ steps.test-action.outputs.num-commits }}"
