--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,9 +3,9 @@ repos:
     rev: 582b9c66e0791980685c8b80bb11e6a3df1a06ef
     hooks:
       - id: end-of-file-fixer
-        exclude: "(^.yarn/)|(.svg$)|(-openapi.json)"
+        exclude: "^dist"
       - id: trailing-whitespace
-        exclude: "(^.yarn/)|(.svg$)|(-openapi.json)"
+        exclude: "^dist"
       - id: check-case-conflict
       - id: check-illegal-windows-names
       - id: check-merge-conflict
@@ -22,7 +22,4 @@ repos:
     rev: v1.38.1
     hooks:
       - id: typos
-  - repo: https://github.com/rhysd/actionlint
-    rev: v1.7.7
-    hooks:
-      - id: actionlint
+        exclude: "^dist"
